load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "xcodeproj",
)
ios_unit_test(
    name = "ios_test",
    minimum_os_version = "12.0",
    visibility = [
        "@rules_xcodeproj//xcodeproj:generated",
    ],
    deps = [
      "//one:one",
      "//two:two"
    ],
)

xcodeproj(
    name = "xcodeproj",
    # build_mode = "xcode",
    minimum_xcode_version = "14",
    project_name = "MapLibre",
    tags = ["manual"],
    top_level_targets = [
      "ios_test"
    ],
)